fix nav stuff on mobile

--- a/css/gamedev.css
+++ b/css/gamedev.css
@@ -130,16 +130,6 @@ header {
     transition: color 650ms;
 }
 
-.nav-mobile {
-    list-style: none;
-    width: 100%;
-    height: 100%;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    transition: color 650ms;
-}
-
 li {
     margin: 0 2rem;
 }
@@ -680,12 +670,12 @@ input[type="submit"]:hover {
         /*font-size: 1.6rem;*/
     }
 
-    .nav-list {
+    #nav-services {
         display: none;
     }
 
-    .nav-mobile {
-        display: flex;
+    #nav-exp {
+        display: none;
     }
 
     .timeline .date::before {
